fix: fix footer size on tablet

--- a/css/main.scss
+++ b/css/main.scss
@@ -557,8 +557,11 @@ body {
       line-height: 1rem;
       border: 0;
     }
+    &-links {
+      margin-bottom: 0;
+    }
     &-menu {
-      margin-bottom: 1.813rem;
+      margin-bottom: 1.875rem;
     }
     &-menu-title {
       margin: 0;
